# VirES-Python-Client

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CITATION.cff  LICENSE  README.md  README.rst  noxfile.py  pyproject.toml  requirements.txt  setup.py  viresclient_testload.ipynb
.github/: dependabot.yml
.github/workflows/: CI.yml  main.yml  publish.yml  test-latest.yml
docs/: ClientRequest.rst  Makefile  ReturnedData.rst  about.rst  access_token.rst  api.rst  available_parameters.rst  available_parameters_aeolus.rst  capabilities.rst  cli.rst  conf.py  config_details.rst  docs_requirements.txt  geomagnetic_models.rst  index.rst  installation.rst  make.bat  notebook_intro.rst  readme.rst  release_notes.rst
docs/_templates/sections/: header.html
docs/notebooks/: simple_example.ipynb
notebooks/: simple_example.ipynb
src/viresclient/: __init__.py  _client.py  _client_aeolus.py  _client_swarm.py  _config.py  _data_handling.py  _gui_links.py  utils.py
src/viresclient/_api/: token.py  upload.py
src/viresclient/_data/: __init__.py  config_aeolus.json  config_swarm.json  gui_workspace_config_swarm.json
src/viresclient/_wps/: environment.py  http_util.py  log_util.py  multipart.py  time_util.py  wps.py  wps_vires.py
src/viresclient/commands/: common.py  configuration.py  upload.py  viresclient.py
test/: test_ClientRequest.py  test_ReturnedData.py  test_viresclient.py
test/data/: test_data_01.cdf
tests/: conftest.py  test_ClientRequest.py  test_GuiLinkGenerator.py  test_ReturnedData.py
tests/data/: test_data_01.csv  test_data_01_from_cdf.json  test_gui_workspace_config.json
viresclient/: __init__.py  _client.py  _client_aeolus.py  _client_swarm.py  _config.py  _data_handling.py  time_util.py  viresclient.py  viresclient_testload.ipynb  wps.py  wps_util.py  wps_vires.py
viresclient/.ipynb_checkpoints/: viresclient interface example-checkpoint.ipynb
viresclient/_api/: token.py  upload.py
viresclient/_data/: __init__.py  config_aeolus.json  config_swarm.json
viresclient/_wps/: environment.py  http_util.py  wps.py
viresclient/_wps/templates/: test_vires_fetch_data.xml  test_vires_fetch_filtered_data.xml  test_vires_fetch_filtered_data_async.xml  vires_aeolus_fetch_filtered_data.xml  vires_aeolus_fetch_filtered_data_async.xml  vires_fetch_filtered_data.xml  vires_fetch_filtered_data_async.xml  vires_getTimeData.xml  vires_get_conjunctions.xml  vires_get_model_info.xml  vires_get_observatories.xml
viresclient/commands/: configuration.py  upload.py  viresclient.py
viresclient/templates/: test_vires_fetch_data.xml  test_vires_fetch_filtered_data.xml  vires_remove_job.xml
viresclient/wps/: http_util.py  time_util.py  wps.py  wps_vires.py
(+13 files in other folders)
