[build-system]
requires = ["flit_core >=3.4"]
build-backend = "flit_core.buildapi"


[project.urls]
homepage = "https://github.com/ESA-VirES/VirES-Python-Client"

[project]
name = "viresclient"
authors = [
    { name = "Ashley Smith", email = "ashley.smith@ed.ac.uk" },
]
maintainers = [
    { name = "Ashley Smith", email = "ashley.smith@ed.ac.uk" },
]
license = { file = "LICENSE" }
description = "A Python client for interacting with a VirES server"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]
dependencies = [
    "cdflib >= 0.3.9",
    "Jinja2 >= 2.10",
    "netCDF4 >= 1.5.3; python_version>='3.8'",
    "netCDF4 >= 1.5.3, <= 1.5.8; python_version<='3.7'",
    "pandas >= 0.18",
    "requests >= 2.0.0",
    "tables >= 3.4.4",
    "tqdm >= 4.23.0",
    "xarray >= 0.11.0",
]

[project.optional-dependencies]
test = [
    "pytest >=6",
]
dev = [
    "pytest >=6",
    "nox >=2022",
]
docs = [
    "Sphinx == 4.5.0",
    "sphinx-book-theme == 0.3.3",
    "sphinx_copybutton == 0.5.0",
    "sphinx-tabs == 3.4.0",
]

[project.scripts]
viresclient = "viresclient.commands.viresclient:start"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = [
    "error",
    "ignore:(\nPyarrow will become a required dependency of pandas):DeprecationWarning",
]
testpaths = [
    "tests",
]

[tool.pycln]
all = true

[tool.mypy]
files = "src"
python_version = "3.8"
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = true
# disallow_incomplete_defs = true
# disallow_any_generics = true
# disallow_subclassing_any = true
# disallow_untyped_calls = true
# disallow_untyped_defs = true
# disallow_untyped_decorators = true
# no_implicit_optional = true
# warn_redundant_casts = true
# warn_unused_ignores = true
# warn_return_any = true
# no_implicit_reexport = true
# strict_equality = true

[tool.isort]
profile = "black"
